<resources>
    <string name="app_name">GithubUserApp</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="username">Username: </string>
    <string name="repository">Repository:</string>
    <string name="companyDetail">Company:</string>
    <string name="location">Location:</string>
    <string name="followers">Followers:</string>
    <string name="followings">Followings :</string>
</resources>