<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@drawable/user1"/>

        <TextView
            android:id="@+id/txt_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/img_item_photo"
            app:layout_constraintStart_toEndOf="@id/img_item_photo"
            tools:text="@string/username"/>

        <TextView
            android:id="@+id/txt_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/txt_item_name"
            app:layout_constraintTop_toBottomOf="@id/txt_item_name"
            app:layout_constraintBottom_toBottomOf="@id/img_item_photo"
            tools:text="@string/name"/>


        <TextView
            android:id="@+id/txt_item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintStart_toStartOf="@+id/txt_item_username"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_username"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>